release 1.4.1. 1. fix print input param extract error; 2. add compiler util and cellMagic; 3. add read/write/cmd magic.